--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     <dependencies>
         
         <dependency>
+ <groupId>javax.servlet</groupId>
+ <artifactId>servlet-api</artifactId>
+ <version>3.0-alpha-1</version>
+ </dependency>
+        
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>2.53.1</version>
